--- a/index.html
+++ b/index.html
@@ -25,34 +25,53 @@
         </nav>
     </header>
     <main>
-        <h1 class="headline1">We work with</h1>
-        <h2 class="headline2">AMAZING SERVICES</h2>
+        <section class="headlines services">
+            <h1 class="headline1">We work with</h1>
+            <h2 class="headline2">AMAZING SERVICES</h2>
+        </section>
         <section class="wrapper">
-            <section class="container">
-                <h3 class="headline3">PHOTORAPHY</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <section class="container one">
+                <div class="inner">
+                    <h3 class="headline3">PHOTORAPHY</h3>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </div>
             </section>
-            <section class="container">
-                <h3 class="headline3">WEB-DESIGN</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <section class="container two">
+                <div class="inner">
+                    <h3 class="headline3">WEB-DESIGN</h3>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </div>
             </section>
-            <section class="container">
-                <h3 class="headline3">CREATIITY</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <section class="container three">
+                <div class="inner">
+                    <h3 class="headline3">CREATIITY</h3>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </div>
             </section>
-            <section class="container">
-                <h3 class="headline3">SEO</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <section class="container four">
+                <div class="inner">
+                    <h3 class="headline3">SEO</h3>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </div>
             </section>
-            <section class="container">
-                <h3 class="headline3">CSS/HTML</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <section class="container five">
+                <div class="inner">
+                    <h3 class="headline3">CSS/HTML</h3>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </div>
             </section>
-            <section class="container">
-                <h3 class="headline3">DIGITAL</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <section class="container six">
+                <div class="inner">
+                    <h3 class="headline3">DIGITAL</h3>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </div>
             </section>
         </section>
+        <section class="headlines team">
+            <h1 class="headline1">Who we are</h1>
+            <h2 class="headline2">MEET OUR TEAM</h2>
+        </section>
+        <p class="text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
     </main>
 </body>
 </html> 
