--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,700,900,900i" rel="stylesheet">
     <title>fw modul 6</title>
 </head>
 <body>
@@ -71,7 +71,51 @@
             <h1 class="headline1">Who we are</h1>
             <h2 class="headline2">MEET OUR TEAM</h2>
         </section>
-        <p class="text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <p class="text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <section class="teamphoto">
+            <section class="Memberteam">
+                <div class="image">
+                    <div class="innertwo">
+                        <ul class="spisok">
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-facebook.png" alt="facebook"></a></li>
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-twitter.png" alt="twitter"></a></li>
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-pinterest.png" alt="pinterest"></a></li>
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-instagramm.png" alt="instagram"></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <h2 class="name">MATTHEW DIX</h2>
+                <p class="description">Graphic Design</p>
+            </section>
+            <section class="Memberteam">
+                <div class="image imageUX">
+                    <div class="innertwo">
+                        <ul class="spisok">
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-facebook.png" alt="facebook"></a></li>
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-twitter.png" alt="twitter"></a></li>
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-pinterest.png" alt="pinterest"></a></li>
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-instagramm.png" alt="instagram"></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <h2 class="name">CHRISTOPHER CAMPBELL</h2>
+                <p class="description">Branding/UX Design</p>
+            </section>
+            <section class="Memberteam">
+                <div class="image imageWEB">
+                    <div class="innertwo">
+                        <ul class="spisok">
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-facebook.png" alt="facebook"></a></li>
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-twitter.png" alt="twitter"></a></li>
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-pinterest.png" alt="pinterest"></a></li>
+                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-instagramm.png" alt="instagram"></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <h2 class="name">MICHAEL FERTIG</h2>
+                <p class="description">Developer</p>
+            </section>
+        </section>
     </main>
 </body>
 </html> 
