--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,700,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900" rel="stylesheet">
     <title>fw modul 6</title>
 </head>
 <body>
@@ -74,13 +74,13 @@
         <p class="text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <section class="teamphoto">
             <section class="Memberteam">
-                <div class="image">
+                <div class="image imageDesg">
                     <div class="innertwo">
                         <ul class="spisok">
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-facebook.png" alt="facebook"></a></li>
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-twitter.png" alt="twitter"></a></li>
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-pinterest.png" alt="pinterest"></a></li>
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-instagramm.png" alt="instagram"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-facebook.png" alt="facebook"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-twitter.png" alt="twitter"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-pinterest.png" alt="pinterest"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-instagramm.png" alt="instagram"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -91,10 +91,10 @@
                 <div class="image imageUX">
                     <div class="innertwo">
                         <ul class="spisok">
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-facebook.png" alt="facebook"></a></li>
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-twitter.png" alt="twitter"></a></li>
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-pinterest.png" alt="pinterest"></a></li>
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-instagramm.png" alt="instagram"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-facebook.png" alt="facebook"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-twitter.png" alt="twitter"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-pinterest.png" alt="pinterest"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-instagramm.png" alt="instagram"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -105,10 +105,10 @@
                 <div class="image imageWEB">
                     <div class="innertwo">
                         <ul class="spisok">
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-facebook.png" alt="facebook"></a></li>
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-twitter.png" alt="twitter"></a></li>
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-pinterest.png" alt="pinterest"></a></li>
-                            <li class="list-item2"><a href="#"><img src="/img/social logo/logo-instagramm.png" alt="instagram"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-facebook.png" alt="facebook"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-twitter.png" alt="twitter"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-pinterest.png" alt="pinterest"></a></li>
+                            <li class="list-item2"><a href="#"><img src="./img/social logo/logo-instagramm.png" alt="instagram"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -117,5 +117,12 @@
             </section>
         </section>
     </main>
+    <footer>
+        <p class="text3">&#169 2016 MoGo free PSD template by <span>Laaqiq</span></p>
+        <div>
+            <input type="Email" placeholder="Your Email...">
+            <button>SUBSCRIBE</button>
+        </div>
+    </footer>
 </body>
 </html> 
